--- a/Coffee/Views/AuthorizationView.axaml
+++ b/Coffee/Views/AuthorizationView.axaml
@@ -2,8 +2,43 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:viewModels="clr-namespace:Coffee.ViewModels"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Coffee.Views.AuthorizationView"
-        Title="AuthorizationView">
-    Welcome to Avalonia!
+        x:DataType="viewModels:AuthorizationVM"
+        x:Name="ThisWindow"
+        Title="AuthorizationView"
+        WindowState="Maximized"
+        WindowStartupLocation="CenterScreen"
+        ExtendClientAreaToDecorationsHint="True">
+    
+        <Window.Styles>
+                <StyleInclude Source="/Styles/AppStyle.axaml" />
+        </Window.Styles>
+        
+        <Panel>
+                <Border MinWidth="200" MaxWidth="500" 
+                        Margin="15" Padding="30"
+                        Background="Azure" 
+                        VerticalAlignment="Center"  
+                        CornerRadius="25">
+                        <StackPanel>
+                                <TextBlock FontWeight="Bold" FontSize="24" Text="Авторизация"/>
+                                
+                                <TextBox Watermark="Логин"
+                                         Text="{Binding Login}"
+                                         Margin="0,10,0,5"/>
+                                
+                                <TextBox Watermark="Пароль"
+                                         Text="{Binding Password}"
+                                         PasswordChar="*"
+                                         Margin="0, 5, 0 ,10"/>
+                                
+                                <Button Content="Вход"
+                                        Command="{Binding ButtonEnter}"
+                                        CommandParameter="{Binding ElementName=ThisWindow}"
+                                        Background="DarkOrange"/>
+                        </StackPanel>
+                </Border>
+        </Panel>
 </Window>
