--- a/Coffee/Views/CheckView.axaml
+++ b/Coffee/Views/CheckView.axaml
@@ -2,8 +2,94 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:viewModels="clr-namespace:Coffee.ViewModels"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Coffee.Views.CheckView"
-        Title="CheckView">
-    Welcome to Avalonia!
+        x:DataType="viewModels:CheckVM"
+        x:CompileBindings="True"
+        x:Name="ThisWindow"
+        Title="CheckView"
+        WindowState="Maximized"
+        WindowStartupLocation="CenterScreen"
+        ExtendClientAreaToDecorationsHint="True">
+        
+        <Window.Styles>
+                <StyleInclude Source="/Styles/AppStyle.axaml" />
+        </Window.Styles>
+        
+        <Grid>
+                <Border Grid.Row="0" 
+                        Background="Azure" Opacity="0.7"
+                        CornerRadius="100"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Margin="20">
+                        <Image Source="/Assets/Logo.png" 
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               Height="150" Width="150"
+                               Margin="20" Opacity="1.4"/>
+                </Border>
+
+                <Border Grid.Row="1"
+                        Background="Azure" Opacity="0.7"
+                        CornerRadius="25"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch"
+                        Margin="15, 0,15,10">
+                        <Grid Opacity="1.4" Background="Transparent"
+                              Margin="15"
+                              HorizontalAlignment="Stretch"
+                              VerticalAlignment="Stretch">
+                                <TextBlock Grid.Column="0" Grid.Row="0" Text="Вы купили:"
+                                           VerticalAlignment="Top"
+                                           HorizontalAlignment="Left"
+                                           FontSize="30"
+                                           FontWeight="Bold"
+                                           FontFamily="Sweet Mavka Script"/>
+                                
+                                <DataGrid Grid.Column="0" Grid.Row="1"
+                                          ItemsSource="{Binding DishesInCheck}"
+                                          HorizontalAlignment="Stretch"
+                                          VerticalAlignment="Stretch"
+                                          AutoGenerateColumns="False">
+                                        <DataGrid.Columns>
+                                                <DataGridTextColumn IsReadOnly="True" Header="Название" FontSize="25"
+                                                                    Binding="{ReflectionBinding Name}"/>
+                                                <DataGridTextColumn IsReadOnly="True" Header="Кол-во" FontSize="25"
+                                                                    Binding="{ReflectionBinding Count}"/>
+                                                <DataGridTextColumn IsReadOnly="True" Header="Цена" FontSize="25"
+                                                                    Binding="{ReflectionBinding Price}"/>
+                                        </DataGrid.Columns>
+                                </DataGrid>
+                                
+                                <TextBlock Grid.Row="2" Grid.Column="0"
+                                           Text="Итого:"/>
+                                
+                                <TextBlock Grid.Column="1" Grid.Row="2"
+                                           Text="{Binding CheckPrice}"/>
+                                
+                                <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="*"/>
+                                        <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                        </Grid>
+                        
+                </Border>
+                        
+
+                
+                <Grid.RowDefinitions>
+                        <RowDefinition Height="200"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+        </Grid>
 </Window>
