--- a/Coffee/Views/EmployeesPageView.axaml
+++ b/Coffee/Views/EmployeesPageView.axaml
@@ -2,7 +2,80 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:vm="using:Coffee.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="Coffee.Views.EmployeesPageView">
-    Welcome to Avalonia!
+             x:Class="Coffee.Views.EmployeesPageView"
+             x:DataType="vm:EmployeesPageViewModel"
+             x:Name="ThisPage"
+             x:CompileBindings="True">
+    
+    <Design.DataContext>
+                <vm:EmployeesPageViewModel/>
+    </Design.DataContext>
+
+        <Grid Background="Transparent"
+                Margin="5"
+                Name="UserGrid">
+                <DataGrid Grid.Column="0" Name="UserList"
+                          ItemsSource="{Binding User}"
+                          Margin="10">
+                        <DataGrid.Columns>
+                                <DataGridTextColumn IsReadOnly="True" Header="№" Binding="{Binding IdUser}"/>
+                                <DataGridTextColumn IsReadOnly="True" Header="Имя" Binding="{Binding Fname}"/>
+                                <DataGridTextColumn IsReadOnly="True" Header="Фамилия" Binding="{Binding Sname}"/>
+                                <DataGridTextColumn IsReadOnly="True" Header="Отчество" Binding="{Binding Lname}"/>
+                                <DataGridTextColumn IsReadOnly="True" Header="Должность" Binding="{Binding IdPostNavigation.Name}"/>
+                                <DataGridTemplateColumn>
+                                        <DataGridTemplateColumn.CellTemplate>
+                                                <DataTemplate>
+                                                        <Button HorizontalAlignment="Center" VerticalAlignment="Center"
+                                                                Height="25" Width="25" Background="Transparent"
+                                                                Command="{Binding ElementName=ThisPage, Path=RemoveEmployee}" 
+                                                                CommandParameter="{Binding }"
+                                                                CornerRadius="50">
+                                                                <Image Source="/Assets/delete.png"/>
+                                                        </Button>
+                                                </DataTemplate>
+                                        </DataGridTemplateColumn.CellTemplate>
+                                </DataGridTemplateColumn>
+                        </DataGrid.Columns>
+                </DataGrid>
+                
+                <StackPanel Grid.Column="1">
+                        <TextBlock Text="Добавить сотрудника" Margin="5" FontSize="36" 
+                                   HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <TextBox Watermark="Логин" Text="{Binding Login}" 
+                                 Margin="5" HorizontalAlignment="Stretch"/>
+                        <TextBox Watermark="Пароль" Text="{Binding Password}" 
+                                 Margin="5" HorizontalAlignment="Stretch"/>
+                        <TextBox Watermark="Имя" Text="{Binding FName}" 
+                                 Margin="5" HorizontalAlignment="Stretch"/>
+                        <TextBox Watermark="Фамилия" Text="{Binding SName}" 
+                                 Margin="5" HorizontalAlignment="Stretch"/>
+                        <TextBox Watermark="Отчество" Text="{Binding LName}" 
+                                 Margin="5" HorizontalAlignment="Stretch"/>
+                        <TextBlock Text="Выберите должность: " Margin="5" FontSize="14" 
+                                   HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                        <DataGrid ItemsSource="{Binding Posts}"
+                                  Name="PostGrid"
+                                  Margin="5">
+                                <DataGrid.Columns>
+                                        <DataGridTextColumn IsReadOnly="True" Header="№" 
+                                                            Binding="{Binding IdPost}"/>
+                                        <DataGridTextColumn IsReadOnly="True" Header="Название" 
+                                                            Binding="{Binding Name}"/>
+                                        <DataGridCheckBoxColumn Header="☑" Binding="{Binding SelectPost}"/>
+                                </DataGrid.Columns>
+                        </DataGrid>
+                        <Button Content="Добавить"
+                                Command="{Binding AddEmployee}"
+                                HorizontalAlignment="Center"
+                                Background="DarkOrange"/>
+                </StackPanel>
+                
+                <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+        </Grid>
 </UserControl>
