--- a/Coffee/Views/MenuPageView.axaml
+++ b/Coffee/Views/MenuPageView.axaml
@@ -2,7 +2,102 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:coffee="clr-namespace:Coffee"
+             xmlns:vm="using:Coffee.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="Coffee.Views.MenuPageView">
-    Welcome to Avalonia!
+             x:Class="Coffee.Views.MenuPageView"
+             x:DataType="vm:MenuPageViewModel"
+             x:Name="ThisWindow">
+    
+    <Design.DataContext>
+        <vm:MenuPageViewModel/>
+    </Design.DataContext>
+        
+    <UserControl.Resources>
+        <coffee:BitmapAssetValueConverter x:Key="BitmapAssetValueConverter"/>
+    </UserControl.Resources>
+    
+    <Grid Margin="5">
+        <ListBox Name="DishListBox"
+                 ItemsSource="{Binding Dish}"
+                 CornerRadius="15" Margin="5" Padding="5"
+                 Grid.Row="0" Grid.RowSpan="2" Grid.Column="0"
+                 Background="Transparent"
+                 VerticalAlignment="Top">
+                <ListBox.ItemsPanel>
+                        <ItemsPanelTemplate>
+                                <WrapPanel MaxHeight="200" Orientation="Horizontal"/>
+                        </ItemsPanelTemplate>
+                </ListBox.ItemsPanel>
+                <ListBox.ItemTemplate>
+                        <DataTemplate>
+                                <Grid>
+                                        <Image Grid.Row="0" 
+                                               Source="{Binding Photo,
+                                               Converter={StaticResource BitmapAssetValueConverter}}"
+                                               Height="130" Width="180"
+                                               VerticalAlignment="Center" HorizontalAlignment="Center"
+                                               Margin="5"/>
+                                        <TextBlock Grid.Row="1" Text="{Binding Name}"
+                                                   HorizontalAlignment="Center"
+                                                   VerticalAlignment="Center"
+                                                   FontSize="18"/>
+                                        
+                                        <Grid.RowDefinitions>
+                                                <RowDefinition Height="Auto"/>
+                                                <RowDefinition Height="*"/>
+                                        </Grid.RowDefinitions>
+                                </Grid>
+                        </DataTemplate>
+                </ListBox.ItemTemplate>
+        </ListBox>
+        
+        
+        <Border Grid.Row="0" Grid.Column="1" Background="Transparent" Margin="10">
+            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center"
+                       FontSize="32">Добавить блюдо</TextBlock>
+        </Border>
+        <StackPanel Grid.Row="1" Grid.Column="1">
+            <TextBox Watermark="Название" Margin="5"/>
+            <TextBox Watermark="Цена" Margin="5"/>
+            <DataGrid Name="CategoryGrid" 
+                      ItemsSource="{Binding Category}"
+                      Margin="5">
+                <DataGrid.Columns>
+                    <DataGridTextColumn IsReadOnly="True" Header="№" Binding="{Binding IdCategory}"/>
+                    <DataGridTextColumn IsReadOnly="True" Header="Название" Binding="{Binding Name}"/>
+                    <DataGridCheckBoxColumn />
+                </DataGrid.Columns>
+                </DataGrid>
+            <Grid>
+                <TextBox Grid.Column="0" Grid.ColumnSpan="2" Watermark="Путь до картинки" Margin="5"
+                         HorizontalAlignment="Stretch"/>
+                <Button Grid.Column="1" HorizontalAlignment="Right" MaxHeight="32" 
+                        Background="Transparent" BorderBrush="Black"
+                        Margin="5" CornerRadius="3"
+                        Command="{Binding SelectImge}"
+                        CommandParameter="{Binding ElementName=ThisWindow}">
+                    <Image Source="/Assets/folder.png"></Image>
+                </Button>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+            </Grid>
+            <Button Content="Добавить"
+                    Command="{Binding AddDish}"
+                    CommandParameter="{Binding ElementName=ThisWindow}"
+                    HorizontalAlignment="Center" Margin="5"
+                    Background="Orange"/>
+        </StackPanel>
+        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+    </Grid>
 </UserControl>
